--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,15 @@
-.card
+mat-card
+{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    min-width: 20vw;
+}
+
+mat-form-field
+{
+    width: 100%;
+}
+
+mat-list
 {
     padding: 2rem;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
