--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,21 +1,194 @@
-mat-card
+.header /* Title of page */
 {
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    min-width: 30vw;
+    padding: 12px 0;
+    font-weight: 700;
+    font-size: 26px;
+    color: #ccc;
+    background-color: #212121;
 }
 
-mat-form-field
+
+.add-btn /* Button to add category */
+{
+    position: absolute;
+    bottom: 18px;
+    right: 18px;
+    height: 48px;
+    width: 48px;
+    font-size: 24px;
+    background-color: #212121;
+    color: #bcfd49;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .5s;
+
+}
+
+.add-btn:hover
+{
+    transform: scale(1.05);
+}
+
+.board /* main board content */
 {
     width: 100%;
+    height: 100%;
+    max-width: 100vw;
+    max-height: calc(100vh - 2 * 2rem - 36px);
+    z-index: 100;
+    overflow-x: auto;
+    overflow-y: auto;
+    padding: 2rem;
 }
 
-mat-list
+.categories /* Categories */
 {
-    padding: 2rem 0;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0 2rem 1rem;
 }
 
-@media screen and (max-width: 1200px) {
-    mat-card {
-        min-width: 50vw;
-    }
+
+.category
+{
+    display: flex;
+    flex-direction: column;
+    margin: 0 8px;
+    min-width: 250px;
+    min-height: 100vh;
+    user-select: none;
+
+}
+
+.add-item
+{
+    background-color: #2999ed;
+    border-radius: 4px;
+    margin: 8px 0;
+    padding: 4px 12px;
+    cursor: pointer;
+    box-shadow: 0 0 4px #444;
+}
+
+.category .items
+{
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+}
+
+.category .item, .cdk-drag-preview
+{
+    position: relative;
+    min-height: 25px;
+    border-radius: 8px;
+    box-shadow: 0 0 4px #383836;
+    padding: 1rem;
+    margin: 12px 0;
+}
+
+.category .item .controls, .cdk-drag-preview .controls
+{
+    display: none;
+    pointer-events: none;
+    position: absolute;
+    top: 0px;
+    right: 15px;
+    transform: translateY(-50%);
+    flex-direction: row;
+}
+
+.category .item:hover .controls, .cdk-drag-preview:hover .controls
+{
+    pointer-events: all;
+    display: flex;
+}
+
+.category .item .controls div, .cdk-drag-preview .controls div
+{
+    color: #565860;
+    width: 28px;
+    height: 28px;
+    transform: translateX(50%);
+    cursor: pointer;
+    margin: 0 4px;
+    border-radius: 18rem;
+    font-size: 18px;
+    background-color: #161514;
+}
+
+.category .item .controls div.disabled, .cdk-drag-preview .controls div.disabled
+{
+    color: #252627;
+    cursor: default;
+}
+
+.category .item .controls div mat-icon, .cdk-drag-preview .controls div mat-icon
+{
+    width: 18px;
+    height: 18px;
+}
+
+.category .item .controls div:hover, .cdk-drag-preview .controls div:hover
+{
+    background-color: #2121217d;
+}
+
+.category .item .controls div.delete, .cdk-drag-preview .controls div.delete
+{
+    color: #AB2328;
+}
+
+
+.category .head, .add-item
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.category .head
+{
+    justify-content: space-between;
+    border-bottom: 1px solid #ddd;
+}
+
+.category .head mat-icon, .add-item mat-icon
+{
+    color: #353739;
+    font-size: 24px;
+}
+
+textarea
+{
+    width: 100%;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    white-space: normal;
+    word-wrap: break-word;
+    resize: none;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    box-sizing: border-box;
+    user-select: none;
+    background-color: transparent;
+    color: rgb(118, 118, 118);
+}
+
+textarea::placeholder
+{
+    color:rgb(118, 118, 118);
+}
+
+.category .head:has(textarea:focus) {
+    border-bottom-color: #2999ed;
+}
+
+input:focus, textarea:focus
+{
+    outline: none;
+    border-color: #2999ed;
 }
