--- a/src/styles.css
+++ b/src/styles.css
@@ -2,25 +2,66 @@
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
 @import url("https://fonts.googleapis.com/css2?family=Livvic:wght@100;200;300;400;500;600;700;900&display=swap");
 
+::-webkit-scrollbar {
+    width: 5px;
+    height: 8px;
+}
+  
+::-webkit-scrollbar-track {
+    background: #121212; 
+    border-radius: 8px;
+
+}
+   
+::-webkit-scrollbar-thumb {
+    background: rgb(85, 85, 85); 
+    border-radius: 8px;
+
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #333; 
+}
+
 *:not(mat-icon) {
     font-family: 'Livvic', sans-serif!important;
+}
+
+.center
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 body
 {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     min-height: 100vh;
     width: 100vw;
+    background-color: #121212;
+    color: #fff;
 }
 
+.gradient {
+    background: rgb(24,71,198);
+    background: -moz-linear-gradient(29deg, rgba(24,71,198,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background: -webkit-linear-gradient(29deg, rgba(24,71,198,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(29deg, rgba(24,71,198,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1847c6",endColorstr="#00d4ff",GradientType=1);
+}
 
-.mat-list-item-content
+/* Custom styles for Angular Materials */
+
+.material-icons
 {
-    justify-content: space-between;
+    font-size: inherit;
+}
+
+.mat-tooltip
+{
+    background-color: #212121;
 }
