Vylepšené zobrazení pro menší obrazovky, upravený pozadí tlačítka pro přidání itemu do kategorie, upraveno css pro textarea

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
           <mat-icon>{{ category.titleFocused ? "edit" : "delete"}}</mat-icon>
         </button>
       </div>
-      <div class="add-item" (click)="add(i, '')">
+      <div class="add-item gradient" (click)="add(i, '')">
         <mat-icon>add</mat-icon> Přidat item
       </div>
       <div class="items">
