--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,8 +31,8 @@
 
 .board /* main board content */
 {
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 4rem);
+    height: calc(100vh - 2 * 2rem - 36px);
     max-width: 100vw;
     max-height: calc(100vh - 2 * 2rem - 36px);
     z-index: 100;
@@ -63,7 +63,6 @@
 
 .add-item
 {
-    background-color: #2999ed;
     border-radius: 4px;
     margin: 8px 0;
     padding: 4px 12px;
@@ -164,16 +163,11 @@ textarea
 {
     width: 100%;
     border: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     white-space: normal;
     word-wrap: break-word;
     resize: none;
     overflow: hidden;
     overflow-wrap: break-word;
-    box-sizing: border-box;
-    user-select: none;
     background-color: transparent;
     color: rgb(118, 118, 118);
 }
