--- a/src/styles.css
+++ b/src/styles.css
@@ -47,11 +47,7 @@ body
 }
 
 .gradient {
-    background: rgb(24,71,198);
-    background: -moz-linear-gradient(29deg, rgba(24,71,198,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-    background: -webkit-linear-gradient(29deg, rgba(24,71,198,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-    background: linear-gradient(29deg, rgba(24,71,198,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1847c6",endColorstr="#00d4ff",GradientType=1);
+    background: linear-gradient(35deg, rgba(24,71,198,1) 0%, rgb(0, 174, 255) 100%);
 }
 
 /* Custom styles for Angular Materials */
